<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_food"
        android:layout_width="80dp"
        android:layout_height="80dp"
        tools:ignore="ContentDescription"
        tools:src="@drawable/food" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/iv_food"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:text="@string/beef" />

    <TextView
        android:id="@+id/tv_introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_alignStart="@id/tv_title"
        android:layout_marginTop="5dp"
        android:textColor="@color/gray"
        tools:text="超值单人套餐，10分钟极速配送" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/tv_introduction"
        android:layout_alignBottom="@id/iv_food"
        android:textColor="@color/mediumseagreen"
        android:textSize="18sp"
        tools:text="@string/price" />

    <TextView
        android:id="@+id/tv_sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/iv_food"
        android:layout_toStartOf="@+id/tv_sell"
        android:layout_marginEnd="20dp"
        android:textColor="@color/chocolate"
        android:textSize="18sp"
        tools:text="@string/new_user_one_yuan"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/tv_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/iv_food"
        android:layout_alignParentEnd="true"
        tools:text="@string/num_sold_out"
        android:layout_marginEnd="10dp"
        tools:ignore="RelativeOverlap" />
</RelativeLayout>